--- a/cc_views_field.info.yml
+++ b/cc_views_field.info.yml
@@ -2,6 +2,6 @@ name: 'CC Views Field'
 type: module
 description: 'Includes logic for cost estimator.'
 core_version_requirement: ^9 || ^10
-package: Custom
+package: 'Custom'
 dependencies:
   - views:views
